--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "chance": "^1.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "react-toastify": "^11.0.5"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
